changed hard coded 'UTF-8' to StandardCharsets.UTF_8